feat: delete a trip
