# docs/swagger/trips.yml
@@ -102,3 +102,30 @@
         description: Not Found
       500:
         description: Internal Server Error
+
+  delete:
+    summary: Delete a trip
+    description: Delete a trip
+    operationId: deleteTrip
+    tags:
+      - Trips
+    security:
+      - BearerAuth: []
+    parameters:
+      - name: tripId
+        in: path
+        description: ID of trip to delete
+        required: true
+        schema:
+          type: string
+    responses:
+      204:
+        description: Trip deleted
+      401:
+        description: Unauthorized
+      403:
+        description: Forbidden
+      404:
+        description: Not Found
+      500:
+        description: Internal Server Error
